--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"unlink": "npm link",
 		"dev": "rm -rf dist && nodemon --exec 'npm run build && npm run start'",
 		"build": "tsc",
+		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "eslint . --cache --ext .ts,.js",
 		"lint-fix": "eslint . --cache --ext .ts,.js --fix",
@@ -41,7 +42,7 @@
 		"npm-publish-nightly": "git checkout nightly && npm publish --tag nightly",
 		"contributors-generate": "all-contributors generate",
 		"all-shields-generate": "all-shields-generate",
-		"pre-commit": "npm run lint-fix && npm run contributors-generate && npm run all-shields-generate",
+		"pre-commit": "npm run lint-fix && npm run test && npm run contributors-generate && npm run all-shields-generate",
 		"pkg-clean": "rm -rf node_modules package-lock.json && npm install",
 		"pkg-update": "npm update",
 		"pkg-upgrade": "npx npm-check-updates -u && npm install",
@@ -49,6 +50,7 @@
 	},
 	"devDependencies": {
 		"@ptkdev/all-shields-cli": "^1.2.0",
+		"@types/jest": "^26.0.22",
 		"@types/node": "^14.14.37",
 		"@types/shelljs": "^0.8.8",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -64,6 +66,7 @@
 		"nodemon": "^2.0.7",
 		"pm2": "^4.5.5",
 		"shelljs": "^0.8.4",
+		"ts-jest": "^26.5.4",
 		"typescript": "^4.2.3",
 		"yargs": "^16.2.0"
 	},
