--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
 	"name": "@ptkdev/node-cli-boilerplate",
 	"displayName": "Node Command Line Interface Boilerplate",
 	"description": "Create your node module (library) with this friendly boilerplate",
-	"version": "1.0.20210326",
+	"version": "1.0.20210329",
 	"main": "dist/cli/cli.js",
+	"types": "dist/types/module.type.d.js",
 	"bin": {
 		"node-cli-boilerplate": "dist/cli/cli.js"
 	},
@@ -42,7 +43,7 @@
 		"npm-publish-nightly": "git checkout nightly && npm publish --tag nightly",
 		"contributors-generate": "all-contributors generate",
 		"all-shields-generate": "all-shields-generate",
-		"pre-commit": "npm run lint-fix && npm run test && npm run contributors-generate && npm run all-shields-generate",
+		"pre-commit": "npm run contributors-generate && npm run all-shields-generate && npm run lint-fix && npm run test",
 		"pkg-clean": "rm -rf node_modules package-lock.json && npm install",
 		"pkg-update": "npm update",
 		"pkg-upgrade": "npx npm-check-updates -u && npm install",
@@ -59,7 +60,7 @@
 		"eslint": "^7.23.0",
 		"eslint-plugin-jest": "^24.3.2",
 		"eslint-plugin-jsdoc": "^32.3.0",
-		"husky": "^5.2.0",
+		"husky": "^6.0.0",
 		"jest": "^26.6.3",
 		"json": "^10.0.0",
 		"markserv": "^1.17.4",
