--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
 	"name": "@ptkdev/node-cli-boilerplate",
 	"displayName": "Node Command Line Interface Boilerplate",
 	"description": "Create your node module (library) with this friendly boilerplate",
-	"version": "1.0.20210329",
+	"version": "1.0.20210330",
 	"main": "dist/cli/cli.js",
 	"types": "dist/types/module.type.d.js",
 	"bin": {
 		"node-cli-boilerplate": "dist/cli/cli.js"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"author": "Patryk Rzucidło [@ptkdev] <support@ptkdev.io> (https://ptk.dev)",
 	"license": "MIT",
@@ -28,8 +31,9 @@
 		"start": "node dist/cli/cli.js",
 		"link": "npm link",
 		"unlink": "npm link",
-		"dev": "rm -rf dist && nodemon --exec 'npm run build && npm run start'",
-		"build": "tsc",
+		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && rm -rf dist && nodemon --exec 'npm run build && npm run start'",
+		"build": "ttsc",
+		"release": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --disable && npm run build",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "eslint . --cache --ext .ts,.js",
@@ -50,12 +54,12 @@
 		"postinstall": "husky install"
 	},
 	"devDependencies": {
-		"@ptkdev/all-shields-cli": "^1.2.0",
+		"@ptkdev/all-shields-cli": "^1.3.0",
 		"@types/jest": "^26.0.22",
 		"@types/node": "^14.14.37",
 		"@types/shelljs": "^0.8.8",
-		"@typescript-eslint/eslint-plugin": "^4.19.0",
-		"@typescript-eslint/parser": "^4.19.0",
+		"@typescript-eslint/eslint-plugin": "^4.20.0",
+		"@typescript-eslint/parser": "^4.20.0",
 		"all-contributors-cli": "^6.20.0",
 		"eslint": "^7.23.0",
 		"eslint-plugin-jest": "^24.3.2",
@@ -68,7 +72,9 @@
 		"pm2": "^4.5.5",
 		"shelljs": "^0.8.4",
 		"ts-jest": "^26.5.4",
+		"ttypescript": "^1.5.12",
 		"typescript": "^4.2.3",
+		"typescript-transform-paths": "^2.2.3",
 		"yargs": "^16.2.0"
 	},
 	"keywords": [
