--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
 		"start": "node dist/cli/cli.js",
 		"link": "npm link",
 		"unlink": "npm unlink",
-		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && rm -rf dist && nodemon --exec 'npm run build && npm run start'",
+		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && ts-node scripts/rmdist.ts && nodemon --exec 'npm run build && npm run start'",
 		"build": "ttsc",
-		"release": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --disable && npm run build",
+		"release": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --disable && npm run build && ttsc --declaration --emitDeclarationOnly",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "eslint . --cache --ext .ts,.js",
