--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"esModuleInterop": true,
 		"noImplicitAny": false,
 		"noImplicitThis": true,
-		"declaration": true,
+		"declaration": false,
 		"strict": false,
 		"skipLibCheck": true,
 		"allowJs": true,
