--- a/package.json
+++ b/package.json
@@ -59,20 +59,21 @@
 		"@types/jest": "^26.0.22",
 		"@types/node": "^14.14.37",
 		"@types/shelljs": "^0.8.8",
-		"@typescript-eslint/eslint-plugin": "^4.20.0",
-		"@typescript-eslint/parser": "^4.20.0",
+		"@typescript-eslint/eslint-plugin": "^4.21.0",
+		"@typescript-eslint/parser": "^4.21.0",
 		"all-contributors-cli": "^6.20.0",
 		"eslint": "^7.23.0",
-		"eslint-plugin-jest": "^24.3.2",
+		"eslint-plugin-jest": "^24.3.4",
 		"eslint-plugin-jsdoc": "^32.3.0",
 		"husky": "^6.0.0",
 		"jest": "^26.6.3",
 		"json": "^10.0.0",
 		"markserv": "^1.17.4",
 		"nodemon": "^2.0.7",
-		"pm2": "^4.5.5",
+		"pm2": "^4.5.6",
 		"shelljs": "^0.8.4",
 		"ts-jest": "^26.5.4",
+		"ts-node": "^9.1.1",
 		"ttypescript": "^1.5.12",
 		"typescript": "^4.2.3",
 		"typescript-transform-paths": "^2.2.3",
