--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"markserv": "^1.17.4",
 		"nodemon": "^2.0.7",
 		"pm2": "^4.5.6",
+		"replace-in-file": "^6.2.0",
 		"shelljs": "^0.8.4",
 		"ts-jest": "^26.5.4",
 		"ts-node": "^9.1.1",
