[Update] Minor fix

--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
 		"setup": "ts-node --skip-project scripts/setup.ts && ts-node --skip-project scripts/changelog.ts && npm run pre-commit",
 		"start": "node dist/cli/cli.js",
 		"link": "npm link",
-		"unlink": "npm unlink",
+		"unlink": "npm unlink @ptkdev/node-cli-boilerplate",
 		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && ts-node scripts/rmdist.ts && nodemon --exec 'npm run build && npm run start'",
 		"build": "ttsc",
 		"release": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --disable && npm run build && ttsc --declaration --emitDeclarationOnly",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
-		"lint": "eslint . --cache --ext .ts,.js",
-		"lint-fix": "eslint . --cache --ext .ts,.js --fix",
+		"lint": "npm run lint-prettify && eslint . --cache --ext .ts,.js",
+		"lint-fix": "npm run lint-prettify && eslint . --cache --ext .ts,.js --fix",
+		"lint-prettify": "prettier --write **/*.{ts,md,json}",
 		"git-set-upstream": "git remote add upstream git@github.com:ptkdev-boilerplate/node-cli-boilerplate.git && git fetch upstream",
 		"git-pull-upstream": "git pull upstream main && git pull upstream beta && git pull upstream nightly",
 		"git-pull": "git pull --recursive",
@@ -55,9 +56,9 @@
 		"pkg-upgrade": "npx npm-check-updates -u && npm install && husky install"
 	},
 	"devDependencies": {
-		"@ptkdev/all-shields-cli": "^1.3.0",
+		"@ptkdev/all-shields-cli": "^2.0.0",
 		"@types/jest": "^26.0.22",
-		"@types/node": "^14.14.37",
+		"@types/node": "^14.14.41",
 		"@types/shelljs": "^0.8.8",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
@@ -71,9 +72,10 @@
 		"markserv": "^1.17.4",
 		"nodemon": "^2.0.7",
 		"pm2": "^4.5.6",
+		"prettier": "^2.2.1",
 		"replace-in-file": "^6.2.0",
 		"shelljs": "^0.8.4",
-		"ts-jest": "^26.5.4",
+		"ts-jest": "^26.5.5",
 		"ts-node": "^9.1.1",
 		"ttypescript": "^1.5.12",
 		"typescript": "^4.2.4",
