--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@ptkdev/node-cli-boilerplate",
 	"displayName": "Node Command Line Interface Boilerplate",
 	"description": "Create node cli with this friendly boilerplate. Use this respository as template for your new node command line interface project",
-	"version": "1.0.20210412",
+	"version": "1.0.20210930",
 	"main": "dist/cli/cli.js",
 	"bin": {
 		"node-cli-boilerplate": "dist/cli/cli.js",
@@ -33,14 +33,14 @@
 		"start": "node dist/cli/cli.js",
 		"link": "npm link",
 		"unlink": "npm unlink @ptkdev/node-cli-boilerplate",
-		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && ts-node scripts/rmdist.ts && nodemon --exec 'npm run build && npm run start'",
+		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && ts-node scripts/rmdist.ts && nodemon --exec 'ts-node --compiler ttypescript app/core/run.ts'",
 		"build": "ttsc",
 		"release": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --disable && npm run build && ttsc --declaration --emitDeclarationOnly",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "npm run lint-prettify && eslint . --cache --ext .ts,.js",
 		"lint-fix": "npm run lint-prettify && eslint . --cache --ext .ts,.js --fix",
-		"lint-prettify": "prettier --write **/*.{ts,md,json}",
+		"lint-prettify": "prettier --write --ignore-unknown '**/*.{ts,md,json}'",
 		"git-set-upstream": "git remote add upstream git@github.com:ptkdev-boilerplate/node-cli-boilerplate.git && git fetch upstream",
 		"git-pull-upstream": "git pull upstream main && git pull upstream beta && git pull upstream nightly",
 		"git-pull": "git pull --recursive",
@@ -55,32 +55,35 @@
 		"pkg-update": "npm update",
 		"pkg-upgrade": "npx npm-check-updates -u && npm install && husky install"
 	},
+	"dependencies": {
+		"@ptkdev/logger": "^1.8.0"
+	},
 	"devDependencies": {
 		"@ptkdev/all-shields-cli": "^2.0.2",
-		"@types/jest": "^26.0.23",
-		"@types/node": "^15.0.1",
-		"@types/shelljs": "^0.8.8",
-		"@typescript-eslint/eslint-plugin": "^4.22.0",
-		"@typescript-eslint/parser": "^4.22.0",
+		"@types/jest": "^27.0.1",
+		"@types/node": "^16.7.2",
+		"@types/shelljs": "^0.8.9",
+		"@typescript-eslint/eslint-plugin": "^4.29.3",
+		"@typescript-eslint/parser": "^4.29.3",
 		"all-contributors-cli": "^6.20.0",
-		"eslint": "^7.25.0",
-		"eslint-plugin-jest": "^24.3.6",
-		"eslint-plugin-jsdoc": "^32.3.3",
-		"husky": "^6.0.0",
-		"jest": "^26.6.3",
+		"eslint": "^7.32.0",
+		"eslint-plugin-jest": "^24.4.0",
+		"eslint-plugin-jsdoc": "^36.0.8",
+		"husky": "^7.0.2",
+		"jest": "^27.0.6",
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
-		"nodemon": "^2.0.7",
-		"pm2": "^4.5.6",
-		"prettier": "^2.2.1",
+		"nodemon": "^2.0.12",
+		"pm2": "^5.1.1",
+		"prettier": "^2.3.2",
 		"replace-in-file": "^6.2.0",
 		"shelljs": "^0.8.4",
-		"ts-jest": "^26.5.5",
-		"ts-node": "^9.1.1",
+		"ts-jest": "^27.0.5",
+		"ts-node": "^10.2.1",
 		"ttypescript": "^1.5.12",
-		"typescript": "^4.2.4",
-		"typescript-transform-paths": "^2.2.3",
-		"yargs": "^16.2.0"
+		"typescript": "^4.4.2",
+		"typescript-transform-paths": "^3.3.1",
+		"yargs": "^17.1.1"
 	},
 	"keywords": [
 		"ptkdev",
