--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,16 +12,22 @@
 		"noImplicitAny": true,
 		"noImplicitThis": true,
 		"declaration": false,
-		"strict": false,
-		"skipLibCheck": true,
 		"allowJs": true,
+		"strict": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"forceConsistentCasingInFileNames": true,
 		"paths": {
 			"@translations/*": ["./app/translations/*"],
 			"@configs/*": ["./app/configs/*"],
+			"@routes/*": ["./app/routes/*"],
 			"@app/*": ["./app/*"]
 		},
 		"typeRoots": ["app/**/types", "node_modules/@types"],
-		"plugins": [{ "transform": "typescript-transform-paths" }, { "transform": "typescript-transform-paths", "afterDeclarations": true }]
+		"plugins": [
+			{ "transform": "typescript-transform-paths" },
+			{ "transform": "typescript-transform-paths", "afterDeclarations": true }
+		]
 	},
 	"include": ["app/**/*"],
 	"exclude": ["node_modules/*", "dist/*", "scripts/*"]
