--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "@ptkdev/node-cli-boilerplate",
 	"displayName": "Node Command Line Interface Boilerplate",
-	"description": "Create node cli with this friendly boilerplate. Use this respository as template for your new node command line interface project",
-	"version": "1.0.20210930",
+	"description": "Create node cli with this user friendly boilerplate. Use this respository as template for your new npm command line interface project",
+	"version": "2.0.0-nightly.0",
 	"main": "dist/cli/cli.js",
 	"bin": {
 		"node-cli-boilerplate": "dist/cli/cli.js",
@@ -28,14 +28,13 @@
 		"node": ">=14.0.0"
 	},
 	"scripts": {
-		"init": "npm install && husky install",
 		"setup": "ts-node --skip-project scripts/setup.ts && ts-node --skip-project scripts/changelog.ts && npm run pre-commit",
-		"start": "node dist/cli/cli.js",
-		"link": "npm link",
-		"unlink": "npm unlink @ptkdev/node-cli-boilerplate",
-		"dev": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --enable && ts-node scripts/rmdist.ts && nodemon --exec 'ts-node --compiler ttypescript app/cli/cli.ts'",
-		"build": "ttsc",
-		"release": "ts-node scripts/configs.ts && ts-node scripts/debug.ts --disable && npm run build && ttsc --declaration --emitDeclarationOnly",
+		"start": "npm run git-hash && node dist/cli/cli.js",
+		"link": "sudo npm link",
+		"unlink": "sudo npm unlink @ptkdev/node-cli-boilerplate",
+		"dev": "npm run git-hash && ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && nodemon --exec 'ts-node app/cli/cli.ts'",
+		"build": "tsc",
+		"release": "npm run git-hash && ts-node scripts/configs.ts && npm run build && tsc --declaration --emitDeclarationOnly",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "npm run lint-prettify && eslint . --cache --ext .ts,.js",
@@ -44,7 +43,10 @@
 		"git-set-upstream": "git remote add upstream git@github.com:ptkdev-boilerplate/node-cli-boilerplate.git && git fetch upstream",
 		"git-pull-upstream": "git pull upstream main && git pull upstream beta && git pull upstream nightly",
 		"git-pull": "git pull --recursive",
+		"git-hash": "ts-node scripts/githash.ts",
 		"git-ignore-reset": "git rm -r --cached . && git add . && git commit -m \"[Fix] Removing all files in .gitignore\"",
+		"github-workflow-next-version": "ts-node scripts/version.ts",
+		"github-workflow-changelog": "ts-node scripts/changelog_release.ts",
 		"npm-publish-main": "git checkout main && npm publish",
 		"npm-publish-beta": "git checkout beta && npm publish --tag beta",
 		"npm-publish-nightly": "git checkout nightly && npm publish --tag nightly",
@@ -53,40 +55,47 @@
 		"pre-commit": "npm run contributors-generate && npm run all-shields-generate && npm run lint-fix && npm run test",
 		"pkg-clean": "rm -rf node_modules package-lock.json && npm install && husky install",
 		"pkg-update": "npm update",
-		"pkg-upgrade": "npx npm-check-updates -u && npm install && husky install"
+		"pkg-upgrade": "npx --yes npm-check-updates -u && npm install && husky install",
+		"prepare": "ts-patch install -s && husky install"
 	},
 	"dependencies": {
 		"@ptkdev/logger": "^1.8.0"
 	},
 	"devDependencies": {
 		"@ptkdev/all-shields-cli": "^2.0.2",
-		"@types/jest": "^27.0.1",
-		"@types/node": "^16.7.2",
-		"@types/shelljs": "^0.8.9",
-		"@typescript-eslint/eslint-plugin": "^4.29.3",
-		"@typescript-eslint/parser": "^4.29.3",
+		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.8",
+		"@types/shelljs": "^0.8.10",
+		"@typescript-eslint/eslint-plugin": "^5.9.0",
+		"@typescript-eslint/parser": "^5.9.0",
 		"all-contributors-cli": "^6.20.0",
 		"eslint": "^7.32.0",
-		"eslint-plugin-jest": "^24.4.0",
-		"eslint-plugin-jsdoc": "^36.0.8",
-		"husky": "^7.0.2",
-		"jest": "^27.0.6",
+		"eslint-plugin-jest": "^25.3.4",
+		"eslint-plugin-jsdoc": "^37.5.1",
+		"husky": "^7.0.4",
+		"jest": "^27.4.7",
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
-		"nodemon": "^2.0.12",
-		"pm2": "^5.1.1",
-		"prettier": "^2.3.2",
-		"replace-in-file": "^6.2.0",
-		"shelljs": "^0.8.4",
-		"ts-jest": "^27.0.5",
-		"ts-node": "^10.2.1",
-		"ttypescript": "^1.5.12",
-		"typescript": "^4.4.2",
+		"nodemon": "^2.0.15",
+		"pm2": "^5.1.2",
+		"prettier": "^2.5.1",
+		"replace-in-file": "^6.3.2",
+		"shelljs": "^0.8.5",
+		"ts-jest": "^27.1.2",
+		"ts-node": "^10.4.0",
+		"ts-patch": "^2.0.1",
+		"typescript": "^4.5.4",
 		"typescript-transform-paths": "^3.3.1",
-		"yargs": "^17.1.1"
+		"yargs": "^17.3.1"
 	},
 	"keywords": [
 		"ptkdev",
+		"npm-library",
+		"make-npm-library",
+		"create-npm-library",
+		"npm-module-sample",
+		"npx-example",
+		"npx-cli",
 		"node",
 		"node-module",
 		"node-library",
@@ -95,8 +104,12 @@
 		"node-line-interface",
 		"node-cmd",
 		"npx",
-		"node-command",
 		"node-command-line",
+		"npm-library",
+		"npm-cli",
+		"npm-cli-bolerplate",
+		"npm-line-interface",
+		"npm-command-line",
 		"command-line-tool",
 		"boilerplate",
 		"github-template"
