--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
 		"contributors-generate": "all-contributors generate",
 		"all-shields-generate": "all-shields-generate",
 		"pre-commit": "npm run contributors-generate && npm run all-shields-generate && npm run lint-fix && npm run test",
-		"pkg-clean": "rm -rf node_modules package-lock.json && npm install && husky install",
+		"pkg-clean": "rm -rf node_modules package-lock.json && npm install && npm install eslint@7 @types/yargs@16 --save-dev && husky install",
 		"pkg-update": "npm update",
-		"pkg-upgrade": "npx --yes npm-check-updates -u && npm install && husky install",
+		"pkg-upgrade": "npx --yes npm-check-updates -u && npm install && npm install eslint@7 @types/yargs@16 --save-dev && husky install",
 		"prepare": "ts-patch install -s && husky install"
 	},
 	"dependencies": {
@@ -64,16 +64,17 @@
 	"devDependencies": {
 		"@ptkdev/all-shields-cli": "^2.0.2",
 		"@types/jest": "^27.4.0",
-		"@types/node": "^17.0.8",
-		"@types/shelljs": "^0.8.10",
-		"@typescript-eslint/eslint-plugin": "^5.9.0",
-		"@typescript-eslint/parser": "^5.9.0",
+		"@types/node": "^17.0.17",
+		"@types/shelljs": "^0.8.11",
+		"@types/yargs": "^16.0.4",
+		"@typescript-eslint/eslint-plugin": "^5.11.0",
+		"@typescript-eslint/parser": "^5.11.0",
 		"all-contributors-cli": "^6.20.0",
 		"eslint": "^7.32.0",
-		"eslint-plugin-jest": "^25.3.4",
-		"eslint-plugin-jsdoc": "^37.5.1",
+		"eslint-plugin-jest": "^26.1.0",
+		"eslint-plugin-jsdoc": "^37.9.0",
 		"husky": "^7.0.4",
-		"jest": "^27.4.7",
+		"jest": "^27.5.1",
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
 		"nodemon": "^2.0.15",
@@ -81,10 +82,10 @@
 		"prettier": "^2.5.1",
 		"replace-in-file": "^6.3.2",
 		"shelljs": "^0.8.5",
-		"ts-jest": "^27.1.2",
-		"ts-node": "^10.4.0",
+		"ts-jest": "^27.1.3",
+		"ts-node": "^10.5.0",
 		"ts-patch": "^2.0.1",
-		"typescript": "^4.5.4",
+		"typescript": "^4.5.5",
 		"typescript-transform-paths": "^3.3.1",
 		"yargs": "^17.3.1"
 	},
