[Fix] Readme, build and scripts

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
 	"scripts": {
 		"setup": "ts-node --skip-project scripts/setup.ts && ts-node --skip-project scripts/changelog.ts && npm run pre-commit",
 		"start": "npm run git-hash && node dist/cli/cli.js",
-		"link": "sudo npm link",
-		"unlink": "sudo npm unlink @ptkdev/node-cli-boilerplate",
-		"dev": "npm run git-hash && ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && nodemon --exec 'ts-node app/cli/cli.ts'",
-		"build": "tsc",
-		"release": "npm run git-hash && ts-node scripts/configs.ts && npm run build && tsc --declaration --emitDeclarationOnly",
+		"link": "npm link",
+		"unlink": "npm unlink @ptkdev/node-cli-boilerplate",
+		"dev": "npm run git-hash && ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && ts-node scripts/debug.ts --enable && nodemon --exec 'ts-node app/cli/cli.ts'",
+		"build": "ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && ts-node scripts/debug.ts --disable && tsc",
+		"release": "npm run git-hash && npm run build && tsc --declaration --emitDeclarationOnly",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "npm run lint-prettify && eslint . --cache --ext .ts,.js",
