--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"compilerOptions": {
-		"module": "CommonJS",
-		"target": "ES6",
+		"module": "esnext",
+		"target": "es2022",
 		"sourceMap": true,
 		"outDir": "./dist/",
-		"lib": ["es2017", "es7", "es6", "DOM"],
+		"lib": ["esnext"],
 		"baseUrl": ".",
 		"resolveJsonModule": true,
 		"moduleResolution": "node",
@@ -29,6 +29,9 @@
 			{ "transform": "typescript-transform-paths" },
 			{ "transform": "typescript-transform-paths", "afterDeclarations": true }
 		]
+	},
+	"ts-node": {
+		"esm": true
 	},
 	"include": ["app/**/*"],
 	"exclude": ["node_modules/*", "dist/*", "scripts/*", "examples/*"]
