--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "npm run lint-prettify && eslint . --cache --ext .ts,.js",
 		"lint-fix": "npm run lint-prettify && eslint . --cache --ext .ts,.js --fix",
-		"lint-prettify": "prettier --write --ignore-unknown '**/*.{ts,md,json}'",
+		"lint-prettify": "prettier --write --ignore-unknown '**/*.{ts,md,json}' .all-contributorsrc .all-shieldsrc",
 		"git-set-upstream": "git remote add upstream git@github.com:ptkdev-boilerplate/node-cli-boilerplate.git && git fetch upstream",
 		"git-pull-upstream": "git pull upstream main && git pull upstream beta && git pull upstream nightly",
 		"git-pull": "git pull --recursive",
@@ -51,7 +51,8 @@
 		"npm-publish-main": "git checkout main && npm publish",
 		"npm-publish-beta": "git checkout beta && npm publish --tag beta",
 		"npm-publish-nightly": "git checkout nightly && npm publish --tag nightly",
-		"contributors-generate": "all-contributors generate",
+		"fetch-shields": "ts-node scripts/update_dotfiles.ts",
+		"contributors-generate": "npm run fetch-shields && all-contributors generate",
 		"all-shields-generate": "all-shields-generate",
 		"pre-commit": "npm run contributors-generate && npm run all-shields-generate && npm run lint-fix && npm run test",
 		"pkg-clean": "rm -rf node_modules package-lock.json && npm install && husky install",
@@ -65,12 +66,13 @@
 	"devDependencies": {
 		"@ptkdev/all-shields-cli": "^2.0.2",
 		"@types/jest": "^29.4.0",
-		"@types/node": "^18.14.0",
+		"@types/node": "^18.14.1",
 		"@types/shelljs": "^0.8.11",
 		"@types/yargs": "^17.0.22",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"@typescript-eslint/parser": "^5.53.0",
 		"all-contributors-cli": "^6.24.0",
+		"dotenv": "^16.0.3",
 		"eslint": "^8.34.0",
 		"eslint-plugin-jest": "^27.2.1",
 		"eslint-plugin-jsdoc": "^40.0.0",
@@ -78,6 +80,7 @@
 		"jest": "^29.4.3",
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
+		"node-fetch": "^3.3.0",
 		"nodemon": "^2.0.20",
 		"pm2": "^5.2.2",
 		"prettier": "^2.8.4",
