--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
 		"node": ">=14.0.0"
 	},
 	"scripts": {
-		"setup": "ts-node scripts/setup.ts && ts-node scripts/changelog.ts && npm run pre-commit",
+		"setup": "ts-node scripts/setup.ts && ts-node scripts/changelog.ts && npm run pre-commit && npm install",
 		"start": "npm run release && node dist/cli/cli.js",
 		"link": "npm link",
 		"unlink": "npm unlink @ptkdev/node-cli-boilerplate",
-		"dev": "npm run git-hash && ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && ts-node scripts/debug.ts --enable && nodemon --exec 'ts-node app/cli/cli.ts'",
-		"build": "ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && ts-node scripts/debug.ts --disable && tsc",
-		"release": "npm run git-hash && npm run build && tsc --declaration --emitDeclarationOnly",
+		"dev": "DEBUG=true npm run git-hash && ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && nodemon --exec 'ts-node app/cli/cli.ts'",
+		"build": "ts-node scripts/configs.ts && ts-node scripts/rmdist.ts && tsc",
+		"release": "DEBUG=false npm run git-hash && npm run build && tsc --declaration --emitDeclarationOnly",
 		"test": "jest app",
 		"docs": "git submodule update --recursive && markserv ./README.md",
 		"lint": "npm run lint-prettify && eslint . --cache --ext .ts,.js",
