--- a/.all-shieldsrc
+++ b/.all-shieldsrc
@@ -139,6 +139,174 @@
 					"platform": "shields"
 				}
 			]
+		},
+		{
+			"id": "projects-badges2",
+			"badges": [
+				{
+					"url": "https://github.com/ptkdev/ptkdev-logger",
+					"color": "#9b59b6",
+					"label": "🦒 Tools",
+					"message": "Node Logger",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/all-shields-cli",
+					"color": "#9b59b6",
+					"label": "🦌 Tools",
+					"message": "All Shields CLI",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/chrome-extension-aspectratio219",
+					"color": "#9b59b6",
+					"label": "🖥️ Tools",
+					"message": "Aspect Ratio 21:9",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://availableon.badge.ptkdev.io/",
+					"color": "#9b59b6",
+					"label": "🛡 Tools",
+					"message": "Badges: Available on",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/json-token-replace",
+					"color": "#9b59b6",
+					"label": "🐾 Tools",
+					"message": "JSON Token Replace",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/eslint-plugin-snakecasejs",
+					"color": "#9b59b6",
+					"label": "🐍 Tools",
+					"message": "ESLint: snakecasejs",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				}
+			]
+		},
+		{
+			"id": "projects-badges3",
+			"badges": [
+				{
+					"url": "https://github.com/ptkdev-components",
+					"color": "#e74c3c",
+					"label": "🚧 WebComponents",
+					"message": "My Collection",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/aboutmeinfo-telegram-bot",
+					"color": "#1FA0F2",
+					"label": "🔖 Bot",
+					"message": "AboutMeInfo",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/quizquickanswer-telegram-game-bot",
+					"color": "#FEC91A",
+					"label": "⏱ Bot",
+					"message": "QuizQuickAnswer",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://t.me/gamebookchatbot",
+					"color": "#34495e",
+					"label": "📚 Bot",
+					"message": "GameBookChat",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/vscode-theme-dark-blood",
+					"color": "#f1c40f",
+					"label": "🎨 Themes",
+					"message": "VSCode",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				}
+			]
+		},
+		{
+			"id": "projects-badges4",
+			"badges": [
+				{
+					"url": "https://github.com/ptkdev-boilerplate?q=svelte",
+					"color": "#f368e0",
+					"label": "👔 Boilerplate",
+					"message": "Svelte",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev-boilerplate?q=webcomponent",
+					"color": "#f368e0",
+					"label": "👔 Boilerplate",
+					"message": "WebComponents",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev-boilerplate?q=bot",
+					"color": "#f368e0",
+					"label": "👔 Boilerplate",
+					"message": "BOT",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev-boilerplate?q=node",
+					"color": "#f368e0",
+					"label": "👔 Boilerplate",
+					"message": "Node",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://meingifs.pics/",
+					"color": "#2ecc71",
+					"label": "💅 App",
+					"message": "Me in Gifs",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				},
+				{
+					"url": "https://github.com/ptkdev/ptkdev-stickers#-installation",
+					"color": "#2ecc71",
+					"label": "📱 App",
+					"message": "Stickers",
+					"style": "flat",
+					"logo": "",
+					"platform": "shields"
+				}
+			]
 		}
 	]
 }
