--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"pre-commit": "ts-node scripts/copyright.ts && npm run contributors-generate && npm run all-shields-generate && npm run lint-fix && npm run test",
 		"pkg-clean": "rm -rf node_modules package-lock.json && npm install && husky install",
 		"pkg-update": "npm update",
-		"pkg-upgrade": "npx --yes npm-check-updates -u && npm install --save-dev && husky install",
+		"pkg-upgrade": "npx --yes npm-check-updates -u && npm install typescript@4 --save-dev && husky install",
 		"prepare": "ts-patch install -s && husky install"
 	},
 	"dependencies": {
@@ -65,28 +65,28 @@
 	},
 	"devDependencies": {
 		"@ptkdev/all-shields-cli": "^2.0.2",
-		"@types/jest": "^29.4.4",
-		"@types/node": "^18.15.3",
-		"@types/shelljs": "^0.8.11",
-		"@types/yargs": "^17.0.22",
-		"@typescript-eslint/eslint-plugin": "^5.55.0",
-		"@typescript-eslint/parser": "^5.55.0",
+		"@types/jest": "^29.5.0",
+		"@types/node": "^18.15.11",
+		"@types/shelljs": "^0.8.12",
+		"@types/yargs": "^17.0.24",
+		"@typescript-eslint/eslint-plugin": "^5.58.0",
+		"@typescript-eslint/parser": "^5.58.0",
 		"all-contributors-cli": "^6.24.0",
 		"dotenv": "^16.0.3",
-		"eslint": "^8.36.0",
+		"eslint": "^8.38.0",
 		"eslint-plugin-jest": "^27.2.1",
-		"eslint-plugin-jsdoc": "^40.0.3",
+		"eslint-plugin-jsdoc": "^41.1.1",
 		"husky": "^8.0.3",
 		"jest": "^29.5.0",
 		"json": "^11.0.0",
 		"markserv": "^1.17.4",
 		"node-fetch": "^3.3.1",
-		"nodemon": "^2.0.21",
+		"nodemon": "^2.0.22",
 		"pm2": "^5.3.0",
-		"prettier": "^2.8.4",
+		"prettier": "^2.8.7",
 		"replace-in-file": "^6.3.5",
 		"shelljs": "^0.8.5",
-		"ts-jest": "^29.0.5",
+		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"ts-patch": "^2.1.0",
 		"typescript": "^4.9.5",
